
=== === === ===
29.11.2011:
 - add stop to context menu entry
 - make context menu grid based
 - add zoom in and zoom out keyboar binding ('=' and '-' respectively)
 - parametrised SimpleInfoBox
 - add TopMenu (with new ZoomBox, MenuEntry, PopUpArrow elements)

28.11.2011:
 - add SimpleInfoBox to gui - useful for displaying short messages
 - add pause info box
 - add centering view on a unit (when double clicking on roster entry)
 - add unit follow status box
 - add unit following
 - fix order cancelling
 - make OrderMarkers remain visible even when unit is deselected

27.11.2011:
 - context menu now openes on mouse hold in mobile mode
 - double click in roster now opens context menu
 - add config file, it's parser and root context object.
   Adjust QML to use the new config system
 - add default config file as fallback when there are problems in the main
   one
 - add QML scene resizing together with window
 - add zooming to game area
 - context menu is readjusted to show appropriately when game area is zoomed
 - change roster menu into a QML Grid element

26.11.2011:
 - add drag&drop for OrderMarkers
 - add order cancelling
 - add map scrolling
 - add some keyboard shortcuts
 - add active pause

25.11.2011:
 - fix group orders mixing their targets
 - add desktop mode and mobile mode (initial, simple implementation. There are plans to make it much
   more robust)

24.11.2011:
 - move trialengine2d out of trial and into master

20.11.2011:
 - add order markers

19.11.2011:
 - add new type of turret: TurretImage (it is composed of Image elements,
   not Rectangle ones. It has almost the same code, as Turret.
   A common ancestor will probably be created later)
 - add unified path searching (by means of a PWD root property)
 - add group orders (assigning orders to all selected units at once)
 - add unit selection in both game area AND roster

18.11.2011:
 - add initial modularity to tanks. Tanks should be now more easy to modify.